--- a/crawl_following_virgool.ipynb
+++ b/crawl_following_virgool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "import re\n",
     "import os\n",
     "import csv\n",
-    "from unidecode import unidecode"
+    "from unidecode import unidecode\n",
+    "from selenium import webdriver"
    ]
   },
   {
